Fix typo in footer text from 'Sistem' to 'System'

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </main>
 
   <footer>
-    &copy; 2025 Virtu DigiLab — Sistem Inventori Alat Laboratorium
+    &copy; 2025 Virtu DigiLab — System Inventori Alat Laboratorium
   </footer>
 
   <script src="script.js"></script>
