--- a/detail.html
+++ b/detail.html
@@ -21,40 +21,107 @@
   <footer>© 2025 Virtu DigiLab</footer>
 
   <script>
-    const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?output=csv";
+    // URL publik CSV (sama seperti di script.js)
+    const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?gid=0&single=true&output=csv";
+
+    // ambil parameter id dari URL (index mengirim id=...)
     const params = new URLSearchParams(window.location.search);
     const id = params.get("id");
     const output = document.getElementById("data");
 
+    // helper: parse satu baris CSV (sederhana, handle quotes)
+    function parseCSVLine(line) {
+      const result = [];
+      let cur = "";
+      let inQuotes = false;
+      for (let i = 0; i < line.length; i++) {
+        const ch = line[i];
+        if (ch === '"' ) {
+          if (inQuotes && line[i+1] === '"') { // escaped quote
+            cur += '"';
+            i++;
+          } else {
+            inQuotes = !inQuotes;
+          }
+        } else if (ch === ',' && !inQuotes) {
+          result.push(cur);
+          cur = "";
+        } else {
+          cur += ch;
+        }
+      }
+      result.push(cur);
+      return result;
+    }
+
     fetch(SHEET_URL)
       .then(res => res.text())
       .then(csv => {
-        const rows = csv.split("\n").map(r => r.split(","));
-        const headers = rows.shift();
-        const match = rows.find(r => r[2].trim() === id.trim());
+        // split aman newline
+        const lines = csv.split(/\r?\n/);
 
-        if (match) {
-          let html = "<table>";
-          headers.forEach((h, i) => {
-            if (h.trim() && match[i]) {
-              if (h.includes("Link Dokumen Sertifikat")) {
-                html += `<tr><td><b>${h}</b></td><td><a href='${match[i]}' target='_blank'>Lihat Sertifikat</a></td></tr>`;
-              } else {
-                html += `<tr><td><b>${h}</b></td><td>${match[i]}</td></tr>`;
-              }
-            }
-          });
-          html += "</table>";
-          output.innerHTML = html;
-
-          new QRCode(document.getElementById("qrcode"), {
-            text: window.location.href,
-            width: 120,
-            height: 120
-          });
-        } else {
-          output.innerHTML = `<p style='color:red'>Data tidak ditemukan untuk kode: ${id}</p>`;
+        // format A: baris 0 = nama sheet, baris 1 kosong, baris 2 = header, baris 3 = kategori, data mulai baris 4
+        if (lines.length < 4) {
+          output.innerHTML = `<p style='color:red'>CSV tidak sesuai format yang diharapkan.</p>`;
+          return;
         }
+
+        // parse header dan data
+        const headerLine = lines[2];
+        const headers = parseCSVLine(headerLine).map(h => h.trim());
+        const rawDataLines = lines.slice(4); // mulai data dari baris 5 (index 4)
+        const rows = rawDataLines
+          .map(l => parseCSVLine(l))
+          .filter(r => r.length > 1 && r.some(cell => cell && cell.trim() !== ""));
+
+        if (!id) {
+          output.innerHTML = `<p style='color:red'>Parameter id tidak ditemukan di URL.</p>`;
+          return;
+        }
+
+        // cari berdasarkan kolom Asset -> index 2 (sesuai format)
+        const match = rows.find(r => {
+          const val = (r[2] || "").trim();
+          return val === id.trim();
+        });
+
+        if (!match) {
+          output.innerHTML = `<p style='color:red'>Data tidak ditemukan untuk kode: ${id}</p>`;
+          return;
+        }
+
+        // bangun tabel detail
+        let html = "<table>";
+        headers.forEach((h, i) => {
+          const value = (match[i] || "").trim();
+          if (!h) return;
+          if (h.toLowerCase().includes("link dokumen") || /sertifikat/i.test(h)) {
+            // jika ada link file, tampilkan sebagai anchor bila bukan kosong
+            if (value) {
+              let href = value;
+              // jika nilai adalah nama file (pdf) dan tidak berisi http, coba buat path relatif
+              if (!/^https?:\/\//i.test(href) && href.toLowerCase().includes(".pdf")) {
+                href = href; // biarkan apa adanya; jika perlu bisa tambahkan base URL
+              }
+              html += `<tr><td><b>${h}</b></td><td><a href="${href}" target="_blank" rel="noopener noreferrer">Lihat Sertifikat</a></td></tr>`;
+            } else {
+              html += `<tr><td><b>${h}</b></td><td>-</td></tr>`;
+            }
+          } else {
+            html += `<tr><td><b>${h}</b></td><td>${value || "-"}</td></tr>`;
+          }
+        });
+        html += "</table>";
+        output.innerHTML = html;
+
+        // QR code (tampilkan URL detail lengkap)
+        const qrContainer = document.getElementById("qrcode");
+        qrContainer.innerHTML = ""; // reset
+        new QRCode(qrContainer, {
+          text: window.location.href,
+          width: 140,
+          height: 140
+        });
       })
       .catch(err => {
         output.innerHTML = `<p style='color:red'>Gagal mengambil data: ${err}</p>`;
