Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="https://raw.githack.com/nurfaputra22/virtudigilab_equipment_web/main/logo%20virtu.png" alt="Virtu DigiLab Logo" class="logo" />
+    <img src="https://raw.githack.com/nurfaputra22/virtudigilab_equipment_web/main/logo_virtu.png" alt="Virtu DigiLab Logo" class="logo" />
     <h1>Daftar Alat Laboratorium</h1>
   </header>
 
