Change column header from 'Kode Material' to 'Serial Number'

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <thead>
           <tr>
             <th>No</th>
-            <th>Kode Material</th>
+            <th>Serial Number</th>
             <th>Asset Description</th>
             <th>Location</th>
             <th>QR Code</th>
