Add QR code styling library to index.html

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
     &copy; 2025 Virtu DigiLab — Sistem Inventori Alat Laboratorium
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.6.0/lib/qr-code-styling.js"></script>
+
   <script src="script.js"></script>
 
 </body>
