--- a/detail.html
+++ b/detail.html
@@ -8,7 +8,6 @@
   <script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
 
   <style>
-    /* Buat QR tampil di tengah */
     .qr-center {
       width: 100%;
       display: flex;
@@ -41,7 +40,7 @@
     const SHEET_URL =
       "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?gid=0&single=true&output=csv";
 
-    const params = new URLSearchParams(window.location.search);
+    const params = new URLSearchParams(location.search);
     const id = params.get("id");
     const output = document.getElementById("data");
 
@@ -89,8 +88,8 @@
           return;
         }
 
-        // 🔥 SEKARANG MENCARI SERIAL NUMBER (KOLUM 6 → r[6])
-        const match = rows.find(r => (r[6] || "").trim() === id.trim());
+        // 🔥 SERIAL ADA DI INDEX 5 (PERBAIKAN PENTING)
+        const match = rows.find(r => (r[5] || "").trim() === id.trim());
 
         if (!match) {
           output.innerHTML = `<p style='color:red'>Data tidak ditemukan untuk Serial: ${id}</p>`;
@@ -103,24 +102,16 @@
           if (!h) return;
 
           if (h.toLowerCase().includes("link dokumen") || /sertifikat/i.test(h)) {
-            if (value) {
-              html += `<tr><td><b>${h}</b></td>
-                       <td><a href="${value}" target="_blank">Lihat Sertifikat</a></td></tr>`;
-            } else {
-              html += `<tr><td><b>${h}</b></td><td>-</td></tr>`;
-            }
+            html += `<tr><td><b>${h}</b></td>
+                     <td>${value ? `<a href="${value}" target="_blank">Lihat Sertifikat</a>` : "-"}</td></tr>`;
           } else {
             html += `<tr><td><b>${h}</b></td><td>${value || "-"}</td></tr>`;
           }
         });
         html += "</table>";
-
         output.innerHTML = html;
 
-        // QR CODE
-        const qrContainer = document.getElementById("qrcode");
-        qrContainer.innerHTML = "";
-        new QRCode(qrContainer, {
+        new QRCode(document.getElementById("qrcode"), {
           text: window.location.href,
           width: 150,
           height: 150
