--- a/detail.html
+++ b/detail.html
@@ -1,126 +1,101 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Detail Alat | Virtu DigiLab</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
-
-  <style>
-    .qr-center {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      margin-top: 20px;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Log Maintenance & Calibration</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" />
 </head>
+<body class="bg-gray-100 p-6">
+  <div class="max-w-6xl mx-auto">
+    <h1 class="text-2xl font-bold mb-4">Maintenance & Calibration Log</h1>
 
-<body>
-  <header>
-    <a href="index.html" class="home-btn">🏠 Home</a>
-    <h1>Detail Alat Laboratorium</h1>
-  </header>
-
-  <main>
-    <div class="card">
-      <div id="data">Memuat detail alat...</div>
-
-      <div class="qr-center">
-        <div id="qrcode"></div>
-      </div>
+    <!-- Maintenance Table -->
+    <h2 class="text-xl font-semibold mt-8 mb-2">Log Maintenance</h2>
+    <div class="overflow-x-auto bg-white shadow rounded-lg p-4">
+      <table class="min-w-full border text-sm" id="maintenanceTable">
+        <thead class="bg-gray-200">
+          <tr>
+            <th class="border px-3 py-2">Date</th>
+            <th class="border px-3 py-2">Asset</th>
+            <th class="border px-3 py-2">Serial</th>
+            <th class="border px-3 py-2">Place</th>
+            <th class="border px-3 py-2">Note</th>
+            <th class="border px-3 py-2">Document</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
     </div>
-  </main>
 
-  <footer>© 2025 Virtu DigiLab</footer>
-
+    <!-- Calibration Table -->
+    <h2 class="text-xl font-semibold mt-10 mb-2">Log Calibration</h2>
+    <div class="overflow-x-auto bg-white shadow rounded-lg p-4">
+      <table class="min-w-full border text-sm" id="calibrationTable">
+        <thead class="bg-gray-200">
+          <tr>
+            <th class="border px-3 py-2">Date</th>
+            <th class="border px-3 py-2">Asset</th>
+            <th class="border px-3 py-2">Serial</th>
+            <th class="border px-3 py-2">Place</th>
+            <th class="border px-3 py-2">Note</th>
+            <th class="border px-3 py-2">Document</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
+  </div>
 
   <script>
-    const SHEET_URL =
-      "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?gid=0&single=true&output=csv";
+    // ================================
+    //   GANTI URL CSV DI SINI
+    // ================================
+    const MAINTENANCE_CSV = "PASTE_URL_MAINTENANCE_CSV";
+    const CALIBRATION_CSV = "PASTE_URL_CALIBRATION_CSV";
 
-    const params = new URLSearchParams(location.search);
-    const id = params.get("id");
-    const output = document.getElementById("data");
+    async function loadCSV(url) {
+      const response = await fetch(url);
+      const text = await response.text();
+      const rows = text.split(/\r?\n/).map(r => r.split(","));
 
-    function parseCSVLine(line) {
-      const result = [];
-      let cur = "";
-      let inQuotes = false;
-      for (let i = 0; i < line.length; i++) {
-        const ch = line[i];
-        if (ch === '"') {
-          if (inQuotes && line[i + 1] === '"') {
-            cur += '"';
-            i++;
-          } else {
-            inQuotes = !inQuotes;
-          }
-        } else if (ch === ',' && !inQuotes) {
-          result.push(cur);
-          cur = "";
-        } else {
-          cur += ch;
-        }
-      }
-      result.push(cur);
-      return result;
+      const headers = rows[0].map(h => h.trim());
+      return rows.slice(1).map(row => {
+        let obj = {};
+        headers.forEach((h, i) => (obj[h] = row[i]));
+        return obj;
+      });
     }
 
-    fetch(SHEET_URL)
-      .then(res => res.text())
-      .then(csv => {
-        const lines = csv.split(/\r?\n/);
+    function renderTable(data, tableId, type) {
+      const tbody = document.querySelector(`#${tableId} tbody`);
+      tbody.innerHTML = "";
 
-        if (lines.length < 4) {
-          output.innerHTML = `<p style='color:red'>CSV tidak sesuai format.</p>`;
-          return;
-        }
-
-        const headers = parseCSVLine(lines[2]).map(h => h.trim());
-        const rows = lines.slice(4)
-          .map(l => parseCSVLine(l))
-          .filter(r => r.some(cell => cell.trim() !== ""));
-
-        if (!id) {
-          output.innerHTML = `<p style='color:red'>ID tidak ditemukan pada URL.</p>`;
-          return;
-        }
-
-        // 🔥 SERIAL ADA DI INDEX 5 (PERBAIKAN PENTING)
-        const match = rows.find(r => (r[5] || "").trim() === id.trim());
-
-        if (!match) {
-          output.innerHTML = `<p style='color:red'>Data tidak ditemukan untuk Serial: ${id}</p>`;
-          return;
-        }
-
-        let html = "<table>";
-        headers.forEach((h, i) => {
-          const value = (match[i] || "").trim();
-          if (!h) return;
-
-          if (h.toLowerCase().includes("link dokumen") || /sertifikat/i.test(h)) {
-            html += `<tr><td><b>${h}</b></td>
-                     <td>${value ? `<a href="${value}" target="_blank">Lihat Sertifikat</a>` : "-"}</td></tr>`;
-          } else {
-            html += `<tr><td><b>${h}</b></td><td>${value || "-"}</td></tr>`;
-          }
-        });
-        html += "</table>";
-        output.innerHTML = html;
-
-        new QRCode(document.getElementById("qrcode"), {
-          text: window.location.href,
-          width: 150,
-          height: 150
-        });
-      })
-      .catch(err => {
-        output.innerHTML = `<p style='color:red'>Gagal memuat data: ${err}</p>`;
+      data.forEach(row => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td class='border px-3 py-2'>${row[`${type} Date`] || "-"}</td>
+          <td class='border px-3 py-2'>${row["Asset Description"] || "-"}</td>
+          <td class='border px-3 py-2'>${row["Serial Number"] || "-"}</td>
+          <td class='border px-3 py-2'>${row["Place Type"] || "-"}</td>
+          <td class='border px-3 py-2'>${row[`Note ${type}`] || "-"}</td>
+          <td class='border px-3 py-2'>
+            ${row["Document"] ? `<a href='${row["Document"]}' target='_blank' class='text-blue-600 underline'>Lihat Dokumen</a>` : "-"}
+          </td>
+        `;
+        tbody.appendChild(tr);
       });
-  </script>
+    }
 
+    async function init() {
+      const maintenance = await loadCSV(MAINTENANCE_CSV);
+      const calibration = await loadCSV(CALIBRATION_CSV);
+
+      renderTable(maintenance, "maintenanceTable", "Maintenance");
+      renderTable(calibration, "calibrationTable", "Calibration");
+    }
+
+    init();
+  </script>
 </body>
 </html>
